fix text spacing to match design

--- a/less/panels/welcome.less
+++ b/less/panels/welcome.less
@@ -27,7 +27,7 @@
       font-size: 30px;
       display: inline-block;
       text-transform: uppercase; 
-      padding: 10px;
+      padding: 20px;
     }
 
     .welcome-message-container {
@@ -39,7 +39,12 @@
       font-weight: 600;
       line-height: 1.33;
       text-align: center;
-      color: @white;	
+      color: @white;
+      padding-bottom: 20px;
+
+        .welcome-message-content {
+        	margin-bottom: 24px;
+        }	
     }
 
     .welcome-button-container {
